--- a/package.json
+++ b/package.json
@@ -6,8 +6,19 @@
   "dependencies": {
     "jasmine-core": "2.6.2",
     "protractor": "4.0.14",
-    "jasmine-allure-reporter": "0.2.3",
     "allure-commandline": "2.0.1"
+  },
+    "devDependencies": {
+    "grunt": "~1.0.1",
+    "grunt-contrib-concat": "~1.0.0",
+    "grunt-contrib-copy": "~1.0.0",
+    "grunt-protractor-runner": "~3.1.0",
+    "grunt-protractor-webdriver": "^0.2.5",
+    "grunt-targethtml": "~0.2.6",
+    "jasmine-allure-reporter": "latest",
+    "jasmine-console-reporter": "latest",
+    "grunt-sonar-runner": "latest",
+    "jasmine-spec-reporter":"latest"
   }
 
 }
