--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     //"grunt-contrib-copy": "~1.0.0",
     "grunt-protractor-runner": "~3.1.0",
     "grunt-protractor-webdriver": "^0.2.5",
-    "grunt-targethtml": "~0.2.6",
+    "grunt-targethtml": "~0.2.6"
     //"jasmine-allure-reporter": "latest",
     //"jasmine-console-reporter": "latest",
     //"grunt-sonar-runner": "latest",
