--- a/package.json
+++ b/package.json
@@ -5,20 +5,21 @@
   "main": "conf.js",
   "dependencies": {
     "jasmine-core": "2.6.2",
-    "protractor": "4.0.14",
-    "allure-commandline": "2.0.1"
-  },
-    "devDependencies": {
-    "grunt": "1.0.0",
-    "grunt-contrib-concat": "~1.0.0",
-    "grunt-contrib-copy": "~1.0.0",
-    "grunt-protractor-runner": "~3.1.0",
-    "grunt-protractor-webdriver": "^0.2.5",
-    "grunt-targethtml": "~0.2.6",
+    "protractor": "4.0.0",
     "jasmine-allure-reporter": "latest",
     "jasmine-console-reporter": "latest",
-    "grunt-sonar-runner": "latest",
-    "jasmine-spec-reporter":"latest"
+    "jasmine-spec-reporter":"latest",
+    "allure-commandline": "2.0.1"
+  },
+
+  "devDependencies": {
+    "grunt": "0.4.5",
+    "grunt-contrib-concat": "0.4.0",
+    "grunt-contrib-copy": "0.5.0",
+    "grunt-protractor-runner": "4.0.0",
+    "grunt-protractor-webdriver": "0.2.5",
+    "grunt-targethtml": "0.2.4"
   }
 
 }
+
